// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header add custom about 1`] = `
Array [
  <h1
    className="sc-AxjAm hWUaCP"
  >
    Michael Danilov
  </h1>,
  <p
    className="sc-AxirZ euxtxW"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Lorem ipsum",
      }
    }
  />,
]
`;

exports[`Header english version renders correctly 1`] = `
<h1
  className="sc-AxjAm hWUaCP"
>
  Michael Danilov
</h1>
`;

exports[`Header russian version renders correctly 1`] = `
<h1
  className="sc-AxjAm hWUaCP"
>
  Михаил Данилов
</h1>
`;
